продвигаюсь по книге

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -18,10 +18,7 @@ input {
 .whinepad-logo {
   display: inline-block;
   background: purple;
-  height: 69px;
-  position: absolute;
-  top: 0;
-  left: 0; }
+  height: 69px; }
 
 * {
   margin: 0;
