--- a/src/css/components/logo.css
+++ b/src/css/components/logo.css
@@ -1,7 +1,4 @@
 .whinepad-logo {
   display: inline-block;
   background: purple;
-  height: 69px;
-  position: absolute;
-  top: 0;
-  left: 0; }
+  height: 69px; }
