--- a/src/css/main-discovery.css
+++ b/src/css/main-discovery.css
@@ -1,3 +1,13 @@
+.form .form-label {
+  color: #A0A0A0;
+  display: block;
+  font-size: 12px;
+  padding: 12px 0 6px; }
+
+.form .form-row {
+  padding-left: 20px;
+  text-align: left; }
+
 .rating {
   cursor: pointer;
   display: inline-block;
@@ -19,3 +29,58 @@
   left: 0;
   padding: 1px;
   position: absolute; }
+
+.actions span {
+  -webkit-border-radius: 150%;
+          border-radius: 150%;
+  border: 2px solid black;
+  color: black;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: bold;
+  height: 25px;
+  margin: 5px 15px 5px 15px;
+  padding-top: 6px;
+  text-align: center;
+  -webkit-transition-duration: 0.1s;
+          transition-duration: 0.1s;
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+  width: 33px; }
+
+.actions span:hover {
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1); }
+
+.actions .actions-info {
+  border-color: #3498DB;
+  color: #3498DB; }
+
+.actions .actions-delete {
+  border-color: #B7477D;
+  color: #B7477D; }
+
+html {
+  background-color: #f0f0f0;
+  font: 16px Arial; }
+
+body {
+  margin: 0; }
+
+input, textarea {
+  font-size: 14px;
+  padding: 10px; }
+
+.app-header {
+  background-color: #6F001B;
+  color: #F0F0F0;
+  font-family: 'Norican', cursive;
+  font-size: 46px;
+  font-style: normal;
+  font-weight: 900;
+  margin: 0;
+  padding: 20px 20px 20px 14px;
+  vertical-align: middle; }
