--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,10 +1,32 @@
 @import "components/excel"
 @import "components/logo"
-*
+@import "components/dialog"
+@import "components/actions"
+@import "components/button"
+@import "components/form"
+@import "components/rating"
+@import "components/suggest"
+@import "components/whinepad"
+
+html
+  background-color: #f0f0f0
+  font: 16px Arial
+
+
+body
   margin: 0
-  padding: 0
-  font-family: sans-serif
-h1
-  padding: 15px 0 0 120px
-  height: 69px
-  position: relative
+
+input, textarea
+  font-size: 14px
+  padding: 10px
+
+.app-header
+  background-color: #6F001B
+  color: #F0F0F0
+  font-family: 'Norican', cursive
+  font-size: 46px
+  font-style: normal
+  font-weight: 900
+  margin: 0
+  padding: 20px 20px 20px 14px
+  vertical-align: middle
