--- a/src/css/main.css
+++ b/src/css/main.css
@@ -20,12 +20,183 @@ input {
   background: purple;
   height: 69px; }
 
-* {
+.dialog {
+  border: 1px solid lightgray; }
+
+.dialog-modal-open {
+  overflow: hidden; }
+
+.dialog .dialog-header {
+  background-color: #6F001B;
+  color: #F0F0F0;
+  font-family: Norican, cursive;
+  font-size: 42px;
   margin: 0;
-  padding: 0;
+  padding: 10px 10px 10px 20px;
+  text-align: left; }
+
+.dialog .dialog-body {
+  border-bottom: 1px solid lightgray;
+  border-top: 1px solid lightgray;
+  max-height: 50vh;
+  overflow-x: hidden;
+  padding: 10px 30px 30px 30px;
+  text-align: center;
+  font-size: 18px; }
+
+.dialog .dialog-footer {
+  padding: 10px;
+  text-align: right; }
+
+.dialog-modal {
+  background: rgba(0, 0, 0, 0.7);
+  bottom: 0;
+  left: 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 1; }
+
+.dialog-modal .dialog-modal-wrap {
+  background: white;
+  margin: 5% auto;
+  width: 350px; }
+
+.dialog-dismiss {
+  color: gray;
+  cursor: pointer;
+  text-decoration: underline; }
+
+.dialog-footer .button {
+  margin: 10px; }
+
+.actions span {
+  -webkit-border-radius: 150%;
+          border-radius: 150%;
+  border: 2px solid black;
+  color: black;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: bold;
+  height: 25px;
+  margin: 5px 15px 5px 15px;
+  padding-top: 6px;
+  text-align: center;
+  -webkit-transition-duration: 0.1s;
+          transition-duration: 0.1s;
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+  width: 33px; }
+
+.actions span:hover {
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1); }
+
+.actions .actions-info {
+  border-color: #3498DB;
+  color: #3498DB; }
+
+.actions .actions-delete {
+  border-color: #B7477D;
+  color: #B7477D; }
+
+.button {
+  background-color: #6f001b;
+  -webkit-border-radius: 28px;
+          border-radius: 28px;
+  border: 0;
+  -webkit-box-shadow: 0px 1px 1px #d9d9d9;
+          box-shadow: 0px 1px 1px #d9d9d9;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 5px 15px;
+  text-decoration: none;
+  -webkit-transition-duration: 0.1s;
+          transition-duration: 0.1s;
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
   font-family: sans-serif; }
 
-h1 {
-  padding: 15px 0 0 120px;
-  height: 69px;
-  position: relative; }
+.button:hover {
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1); }
+
+.form .form-label {
+  color: #A0A0A0;
+  display: block;
+  font-size: 12px;
+  padding: 12px 0 6px; }
+
+.form .form-row {
+  padding-left: 20px;
+  text-align: left; }
+
+.rating {
+  cursor: pointer;
+  display: inline-block;
+  white-space: nowrap;
+  font-size: 28px; }
+
+.rating.rating_readonly {
+  cursor: auto; }
+
+.rating > span {
+  color: grey;
+  display: inline-block;
+  position: relative;
+  width: 1.1em; }
+
+.rating .rating-on:before {
+  color: gold;
+  content: "\2605";
+  left: 0;
+  padding: 1px;
+  position: absolute; }
+
+.whinepad .whinepad-toolbar {
+  margin: 40px; }
+
+.whinepad .whinepad-toolbarAdd {
+  float: left; }
+
+.Whinepad .whinepad-toolbar-search {
+  float: right; }
+
+.whinepad .whinepad-toolbar-add-button {
+  font-size: 32px; }
+
+.whinepad .whinepad-datagrid {
+  clear: both;
+  margin: 40px;
+  padding-top: 20px; }
+
+html {
+  background-color: #f0f0f0;
+  font: 16px Arial; }
+
+body {
+  margin: 0; }
+
+input, textarea {
+  font-size: 14px;
+  padding: 10px; }
+
+.app-header {
+  background-color: #6F001B;
+  color: #F0F0F0;
+  font-family: 'Norican', cursive;
+  font-size: 46px;
+  font-style: normal;
+  font-weight: 900;
+  margin: 0;
+  padding: 20px 20px 20px 14px;
+  vertical-align: middle; }
